add new website from server na

--- a/xem-phim-bo/naruto-shippuden/index.html
+++ b/xem-phim-bo/naruto-shippuden/index.html
@@ -1197,7 +1197,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1743,40 +1743,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tham-tu-lung-danh-conan-kho-bau-duoi-day-dai-duong" title="Thám Tử Lừng Danh Conan: Kho Báu Dưới Đáy Đại Dương">
+          <a class="list-top-movie-link" href="/phim-moi/bi-mat-bi-vui-lap-phan-3" title="Bí Mật Bị Vùi Lấp (Phần 3)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-tu-lung-danh-conan-kho-bau-duoi-day-dai-duong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bi-mat-bi-vui-lap-phan-3-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thám Tử Lừng Danh Conan: Kho Báu Dưới Đáy Đại Dương
+             Bí Mật Bị Vùi Lấp (Phần 3)
             </span>
             <span class="list-top-movie-item-en">
-             Detective Conan: Jolly Roger in the Deep Azure
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/daniel-spellbound" title="Daniel Spellbound">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/daniel-spellbound-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Daniel Spellbound
-            </span>
-            <span class="list-top-movie-item-en">
-             Daniel Spellbound
+             Outer Banks (Season 3)
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1787,65 +1765,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/boi-vi-anh-yeu-em" title="Bởi Vì Anh Yêu Em">
+          <a class="list-top-movie-link" href="/phim-moi/the-gioi-bau-troi" title="Thế Giới Bầu Trời">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/boi-vi-anh-yeu-em-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-gioi-bau-troi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bởi Vì Anh Yêu Em
+             Thế Giới Bầu Trời
             </span>
             <span class="list-top-movie-item-en">
-             Because I Love You
+             Granblue Fantasy The Animation
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ve-si-gia-mao" title="Vệ Sĩ Giả Mạo">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ve-si-gia-mao-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Vệ Sĩ Giả Mạo
+            </span>
+            <span class="list-top-movie-item-en">
+             FAKE bodyguard
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/toi-la-sam" title="Tôi Là Sam">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-la-sam-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tôi Là Sam
+            </span>
+            <span class="list-top-movie-item-en">
+             I Am Sam
+            </span>
+            <span class="list-top-movie-item-view">
+             0 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/chu-chuot-sieu-quay-2" title="Chú Chuột Siêu Quậy 2">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chu-chuot-sieu-quay-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Chú Chuột Siêu Quậy 2
+            </span>
+            <span class="list-top-movie-item-en">
+             Stuart Little 2
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/xu-so-mong-mo" title="Xứ sở mộng mơ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xu-so-mong-mo-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Xứ sở mộng mơ
-            </span>
-            <span class="list-top-movie-item-en">
-             Slumberland
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/loi-phong-thap" title="Lôi Phong Tháp">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/loi-phong-thap-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Lôi Phong Tháp
-            </span>
-            <span class="list-top-movie-item-en">
-             Lôi Phong Tháp
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
