add new website from server na

--- a/xem-phim-bo/tap-doan-hac-am-o-me-cung/index.html
+++ b/xem-phim-bo/tap-doan-hac-am-o-me-cung/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1657,21 +1657,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/scooby-doo-and-scrappy-doo-phan-2" title="Scooby-Doo and Scrappy-Doo (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/tay-lai-siji" title="Tay Lái Siji">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/scooby-doo-and-scrappy-doo-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tay-lai-siji-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Scooby-Doo and Scrappy-Doo (Phần 2)
+             Tay Lái Siji
             </span>
             <span class="list-top-movie-item-en">
-             Scooby-Doo and Scrappy-Doo (Season 2)
+             Siji: Driver
             </span>
             <span class="list-top-movie-item-view">
-             5 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1679,18 +1679,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/giai-cuu-ong-gia-noel" title="Giải Cứu Ông Già Noel">
+          <a class="list-top-movie-link" href="/phim-moi/tieng-vong-tu-dia-nguc" title="Tiếng Vọng Từ Địa Ngục">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giai-cuu-ong-gia-noel-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tieng-vong-tu-dia-nguc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Giải Cứu Ông Già Noel
+             Tiếng Vọng Từ Địa Ngục
             </span>
             <span class="list-top-movie-item-en">
-             Saving Santa
+             The Voices
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1701,40 +1701,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sinh-vat-huyen-bi-toi-ac-cua-grindelwald" title="Sinh Vật Huyền Bí: Tội Ác Của Grindelwald">
+          <a class="list-top-movie-link" href="/phim-moi/nu-cuoi-nang-mona-lisa" title="Nụ cười nàng Mona Lisa">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sinh-vat-huyen-bi-toi-ac-cua-grindelwald-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-cuoi-nang-mona-lisa-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sinh Vật Huyền Bí: Tội Ác Của Grindelwald
+             Nụ cười nàng Mona Lisa
             </span>
             <span class="list-top-movie-item-en">
-             Fantastic Beasts: The Crimes of Grindelwald
-            </span>
-            <span class="list-top-movie-item-view">
-             5 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-co-ban-gai-nguc-khung-cua-toi" title="Những Cô Bạn Gái Ngực Khủng Của Tôi">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-co-ban-gai-nguc-khung-cua-toi-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Những Cô Bạn Gái Ngực Khủng Của Tôi
-            </span>
-            <span class="list-top-movie-item-en">
-             침대에서 뒹구는 가슴큰 미시들
+             Mona Lisa Smile
             </span>
             <span class="list-top-movie-item-view">
              6 lượt xem
@@ -1745,21 +1723,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ringing-fate" title="Ringing Fate">
+          <a class="list-top-movie-link" href="/phim-moi/tig" title="Tig">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ringing-fate-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tig-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ringing Fate
+             Tig
             </span>
             <span class="list-top-movie-item-en">
-             Ringing Fate
+             Tig
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/jane-fonda-lily-tomlin-dem-cua-cac-chi-em" title="Jane Fonda &amp; Lily Tomlin: Đêm của các chị em">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/jane-fonda-lily-tomlin-dem-cua-cac-chi-em-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Jane Fonda &amp; Lily Tomlin: Đêm của các chị em
+            </span>
+            <span class="list-top-movie-item-en">
+             Jane Fonda &amp; Lily Tomlin: Ladies Night Live
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
