add new website from server na

--- a/xem-phim-bo/luu-quang-dan/index.html
+++ b/xem-phim-bo/luu-quang-dan/index.html
@@ -1192,7 +1192,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1662,84 +1662,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-nu-chinh-tri-gia-tre-tuoi" title="Những Nữ Chính Trị Gia Trẻ Tuổi">
+          <a class="list-top-movie-link" href="/phim-moi/pony-be-nho-tao-dau-an-rieng-phan-4" title="Pony bé nhỏ: Tạo dấu ấn riêng (Phần 4)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-nu-chinh-tri-gia-tre-tuoi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pony-be-nho-tao-dau-an-rieng-phan-4-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những Nữ Chính Trị Gia Trẻ Tuổi
+             Pony bé nhỏ: Tạo dấu ấn riêng (Phần 4)
             </span>
             <span class="list-top-movie-item-en">
-             Girls State
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/career-opportunities" title="Career Opportunities">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/career-opportunities-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Career Opportunities
-            </span>
-            <span class="list-top-movie-item-en">
-             Career Opportunities
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sat-canh-phan-cong" title="Sát cánh phản công">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sat-canh-phan-cong-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Sát cánh phản công
-            </span>
-            <span class="list-top-movie-item-en">
-             A Dream Come True
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vua-su-tu-3" title="Vua Sư Tử 3">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vua-su-tu-3-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Vua Sư Tử 3
-            </span>
-            <span class="list-top-movie-item-en">
-             The Lion King 1½
+             My Little Pony: Make Your Mark (Season 4)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1750,21 +1684,87 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuc-toc-boi-luan" title="Cực Tốc Bội Luận">
+          <a class="list-top-movie-link" href="/phim-moi/ngoi-nha-bup-be" title="Ngôi nhà búp bê">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuc-toc-boi-luan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngoi-nha-bup-be-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cực Tốc Bội Luận
+             Ngôi nhà búp bê
             </span>
             <span class="list-top-movie-item-en">
-             We Go Fast On Trust
+             Doll House
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thanh-guom-diet-quy-chuyen-tau-vo-tan" title="Thanh gươm diệt quỷ: Chuyến tàu vô tận">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-guom-diet-quy-chuyen-tau-vo-tan-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thanh gươm diệt quỷ: Chuyến tàu vô tận
+            </span>
+            <span class="list-top-movie-item-en">
+             Demon Slayer -Kimetsu no Yaiba- The Movie: Mugen Train
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/bac-si-x-ngoai-khoa-daimon-michiko-phan-7" title="Bác sĩ X ngoại khoa: Daimon Michiko (Phần 7)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bac-si-x-ngoai-khoa-daimon-michiko-phan-7-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bác sĩ X ngoại khoa: Daimon Michiko (Phần 7)
+            </span>
+            <span class="list-top-movie-item-en">
+             Doctor X Surgeon Michiko Daimon (Season 7)
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/chien-phu-hanh-dong-2-diep-huyet" title="Chiến Phủ Hành Động 2: Điệp Huyết">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chien-phu-hanh-dong-2-diep-huyet-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Chiến Phủ Hành Động 2: Điệp Huyết
+            </span>
+            <span class="list-top-movie-item-en">
+             Tomahawk Action 2 Bloodthirsty
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
