add new website from server na

--- a/xem-phim-bo/thien-su-toi-loi/index.html
+++ b/xem-phim-bo/thien-su-toi-loi/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             10
+             11
             </dd>
             <br/>
            </dl>
@@ -1756,21 +1756,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-nguoi-ban-cua-chi-gai-toi" title="Những Người Bạn Của Chị Gái Tôi">
+          <a class="list-top-movie-link" href="/phim-moi/nguoc-dong-thoi-gian-de-yeu-anh" title="Ngược Dòng Thời Gian Để Yêu Anh">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-nguoi-ban-cua-chi-gai-toi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoc-dong-thoi-gian-de-yeu-anh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những Người Bạn Của Chị Gái Tôi
+             Ngược Dòng Thời Gian Để Yêu Anh
             </span>
             <span class="list-top-movie-item-en">
-             내 여자친구의 언니들
+             Bpoop Phaeh Saniwaat
             </span>
             <span class="list-top-movie-item-view">
-             5 lượt xem
+             21 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1778,40 +1778,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thien-ac-quai" title="Thiện, Ác, Quái">
+          <a class="list-top-movie-link" href="/phim-moi/doi-chong-khung-bo-liep-anh-phan-1" title="Đội Chống Khủng Bố Liệp Ảnh (Phần 1)">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thien-ac-quai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/doi-chong-khung-bo-liep-anh-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thiện, Ác, Quái
+             Đội Chống Khủng Bố Liệp Ảnh (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             The Good, the Bad, the Weird
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vo-quyt-day-co-mong-tay-nhon" title="Vỏ Quýt Dày Có Móng Tay Nhọn">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vo-quyt-day-co-mong-tay-nhon-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Vỏ Quýt Dày Có Móng Tay Nhọn
-            </span>
-            <span class="list-top-movie-item-en">
-             Curry And Pepper
+             Anti-Terrorism Special Forces 1
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1822,18 +1800,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/xe-co-dien-ca-phe-va-chuyen-tro-cung-danh-hai-phan-4" title="Xe cổ điển, cà phê và chuyện trò cùng danh hài (Phần 4)">
+          <a class="list-top-movie-link" href="/phim-moi/uoc-dinh-thoi-gian-yeu-em" title="Ước Định Thời Gian Yêu Em">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xe-co-dien-ca-phe-va-chuyen-tro-cung-danh-hai-phan-4-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/uoc-dinh-thoi-gian-yeu-em-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Xe cổ điển, cà phê và chuyện trò cùng danh hài (Phần 4)
+             Ước Định Thời Gian Yêu Em
             </span>
             <span class="list-top-movie-item-en">
-             Comedians in Cars Getting Coffee (Season 4)
+             Love in Time
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1844,18 +1822,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ngu-long-tu-tien-chien-truong-thuong-co" title="Ngự Long Tu Tiên: Chiến Trường Thượng Cổ">
+          <a class="list-top-movie-link" href="/phim-moi/an-uong-va-ket-hon" title="Ăn Uống và Kết Hôn">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngu-long-tu-tien-chien-truong-thuong-co-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/an-uong-va-ket-hon-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ngự Long Tu Tiên: Chiến Trường Thượng Cổ
+             Ăn Uống và Kết Hôn
             </span>
             <span class="list-top-movie-item-en">
-             Dragon Sword -Ancient Battlefield
+             Eat, Drink And Be Married
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nguoi-yeu-dau" title="Người Yêu Dấu">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-yeu-dau-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Người Yêu Dấu
+            </span>
+            <span class="list-top-movie-item-en">
+             Saawariya
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
